--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -32,8 +32,12 @@
         <hr class="divide-line-thin"/>
         <div class="order-right-section__bottom">
           <div class="flex justify-between p-20 mt-20">
-            <span class="highlight-text">총 결제금액</span>
-            <span class="highlight-text order-total-price"></span>
+            <span class="highlight-text">총 결제금액(KRW)</span>
+            <span class="highlight-text order-total-price-won"></span>
+          </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">총 결제금액(USD)</span>
+            <span class="highlight-text order-total-price-dollar"></span>
           </div>
         </div>
       </section>
@@ -77,7 +81,8 @@
             });
 
             document.querySelector('.order-item-list').innerHTML = element;
-            document.querySelector('.order-right-section .order-total-price').innerText = `${data.totalPrice} 원`;
+            document.querySelector('.order-right-section .order-total-price-won').innerText = `${data.totalPrice} 원`;
+            document.querySelector('.order-right-section .order-total-price-dollar').innerText = `${data.totalConvertedPrice.toFixed(2)} 달러`;
         }).catch((error) => {
             console.error(error);
         });
