--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -82,7 +82,13 @@
 
             document.querySelector('.order-item-list').innerHTML = element;
             document.querySelector('.order-right-section .order-total-price-won').innerText = `${data.totalPrice} 원`;
-            document.querySelector('.order-right-section .order-total-price-dollar').innerText = `${data.totalConvertedPrice.toFixed(2)} 달러`;
+
+            const totalConvertedPrice = data.totalConvertedPrice;
+            if (!Number.isFinite(totalConvertedPrice)) {
+                document.querySelector('.order-right-section .order-total-price-dollar').innerText = `정보 없음`;
+            } else {
+                document.querySelector('.order-right-section .order-total-price-dollar').innerText = `${totalConvertedPrice.toFixed(2)} 달러`;
+            }
         }).catch((error) => {
             console.error(error);
         });
